[package]
name = "tide"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tide = "0"
async-std = { version = "1", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
tide-rustls = "0"
rust-embed = "6" 
http-types = { version = "2" }
once_cell = "1"
# tensorflow = "0"
futures = "0"
indexmap = "1"
infer = "0"
clap = "2"
juniper = "0"
[dependencies.redis]
version = "0"
features = ["async-std-comp"]

[dependencies.mongodb]
version = "2"
default-features = false
features = ["async-std-runtime"]